--- a/Lab1/CMakeLists.txt
+++ b/Lab1/CMakeLists.txt
@@ -1,7 +1,13 @@
 cmake_minimum_required(VERSION 3.9)
 project(Lab1)
 
-set(CMAKE_CXX_STANDARD 11)
+find_package(MPI REQUIRED)
+include_directories(${MPI_INCLUDE_PATH})
+
+SET(CMAKE_C_COMPILER mpicc)
+SET(CMAKE_CXX_COMPILER mpicxx)
+
+set(CMAKE_CXX_STANDARD 17)
 
 add_executable(Lab1
         blur_fproxy.c
@@ -18,4 +24,5 @@ add_executable(Lab1
         thresfilter.c
         thresfilter.h
         threshold.c
-        thresmain.c)
+        thresmain.c
+        )
