--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /*/cmake-build-debug/
 /*/.idea/
 /*/CPPTest/cmake-build-debug/
+/*/CPPTest/.idea/
+/*/CPPTest/blurc
+/*/CPPTest/thresc
+/*/CPPTest/*.o
