--- a/Lab1/CPPTest/CMakeLists.txt
+++ b/Lab1/CPPTest/CMakeLists.txt
@@ -9,10 +9,25 @@ SET(CMAKE_CXX_COMPILER mpicxx)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Lab1
+add_executable(blur
         blurmain.cpp
         ppm.cpp
         ppm.h
         ppmio.cpp
         ppmio.h
+        gaussw.cpp
+        gaussw.h
+        blurfilter.cpp
+        blurfilter.h
+        )
+
+
+add_executable(thresh
+        thresmain.cpp
+        ppm.cpp
+        ppm.h
+        ppmio.cpp
+        ppmio.h
+        thresfilter.cpp
+        thresfilter.h
         )
