Changed Makefile, moved images

--- a/Lab1/CPPTest/Makefile
+++ b/Lab1/CPPTest/Makefile
@@ -1,14 +1,15 @@
 
 EXECS=blurc thresc
 MPICXX?=mpicxx
+CXXFLAGS= -std=c++17
 
 all: ${EXECS}
 
 blurc: blurmain.cpp
-	${MPICXX} -o blurc blurmain.cpp ppmio.cpp gaussw.cpp blurfilter.cpp
+	${MPICXX} ${CXXFLAGS} -o blurc blurmain.cpp ppmio.cpp gaussw.cpp blurfilter.cpp
 
 thresc: thresmain.cpp
-	${MPICXX} -o thresc thresmain.cpp thresfilter.cpp ppmio.cpp
+	${MPICXX} ${CXXFLAGS} -o thresc thresmain.cpp thresfilter.cpp ppmio.cpp
 
 clean:
 	rm -f ${EXECS}
