--- a/Lab1/CPPTest/Makefile
+++ b/Lab1/CPPTest/Makefile
@@ -12,4 +12,4 @@ blurc: blurmain.cpp
 	${MPICXX} ${CXXFLAGS} -o blurc blurmain.cpp blurfilter.cpp
 
 thresc: thresmain.cpp
-	${MPICXX} ${CXXFLAGS} -o thresc thresmain.cpp thresfilter.cpp ppmio.cpp
+	${MPICXX} ${CXXFLAGS} -o thresc thresmain.cpp thresfilter.cpp
