Added CMakeLists and MakeFile for OpenMP. Haven't tested for Linux.

--- a/Lab3_openmp/Makefile
+++ b/Lab3_openmp/Makefile
@@ -1,2 +1,6 @@
-laplsolv:laplsolv.f90
-	ifort -fopenmp $^ -o $@
+CC = g++
+CPP = /usr/local/opt/llvm/bin/clang
+CXXFLAGS = -Xpreprocessor -fopenmp /usr/local/opt/libomp/include
+LDFLAGS = /usr/local/opt/libomp/lib/
+example: laplsolv.cpp
+	$(CC) $(CPP) $(CPPFLAGS) -o example laplsolv.cpp $(LDFLAGS)
