--- a/Lab3_openmp/Makefile
+++ b/Lab3_openmp/Makefile
@@ -1,6 +1,6 @@
 CC = g++
-CPP = /usr/local/opt/llvm/bin/clang
-CXXFLAGS = -Xpreprocessor -fopenmp /usr/local/opt/libomp/include
-LDFLAGS = /usr/local/opt/libomp/lib/
+CXXFLAGS = -fopenmp -std=c++17
+
 example: laplsolv.cpp
-	$(CC) $(CPP) $(CPPFLAGS) -o example laplsolv.cpp $(LDFLAGS)
+	$(CC) $(CXXFLAGS) -o example laplsolv.cpp
+
