--- a/Lab4_particlesim/Makefile
+++ b/Lab4_particlesim/Makefile
@@ -2,7 +2,7 @@ CXXFLAGS = -std=c++11
 MPICXX=mpicxx
 
 example: main_sequential.cpp
-	${MPICXX} $(CXXFLAGS) -o sequential main_sequential.cpp physics.cpp
+	${MPICXX} $(CXXFLAGS) -o particlesim main_sequential.cpp physics.cpp
 
 allclean:
-	-rm *.o sequential
+	-rm *.o particlesim
